--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.7.0",
     "moveto": "^1.6.1",
     "serve-favicon": "~2.3.2",
-    "socket.io": "^2.0.1"
+    "socket.io": "^2.0.1",
+    "string-hash": "^1.1.3"
   }
 }
